--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-05 18:51+0200\n"
+"POT-Creation-Date: 2022-03-07 15:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -80,11 +80,32 @@ msgid "Каталог фильмов"
 msgstr "Movie catalog"
 
 #: .\web_site\templates\web_site\catalog_movies.html:42
+msgid "Выберите жанр"
+msgstr "Select genre"
+
+#: .\web_site\templates\web_site\catalog_movies.html:46
 #: .\web_site\templates\web_site\movie_detail.html:47
 msgid "Жанр"
 msgstr "Genre"
 
 #: .\web_site\templates\web_site\catalog_movies.html:58
+msgid "Выберите год"
+msgstr "Select year"
+
+#: .\web_site\templates\web_site\catalog_movies.html:62
+msgid "Год"
+msgstr "Year"
+
+#: .\web_site\templates\web_site\catalog_movies.html:74
+msgid "Выберите страну"
+msgstr "Select country"
+
+#: .\web_site\templates\web_site\catalog_movies.html:78
+#: .\web_site\templates\web_site\movie_detail.html:64
+msgid "Страна"
+msgstr "Country"
+
+#: .\web_site\templates\web_site\catalog_movies.html:89
 msgid "Найти"
 msgstr "Search"
 
@@ -159,10 +180,6 @@ msgstr "World Premiere"
 #: .\web_site\templates\web_site\movie_detail.html:63
 msgid "Продолжительность"
 msgstr "Duration"
-
-#: .\web_site\templates\web_site\movie_detail.html:64
-msgid "Страна"
-msgstr "Country"
 
 #: .\web_site\templates\web_site\movie_detail.html:65
 msgid "Рейтинг Кинопоиск"
